fix alignments of content

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 img {
     height: 250px;
 }
@@ -9,6 +14,8 @@ p {
 
 body {
     text-align: center;
+    height: 100vh;
+    padding: 10px;
 }
 
 .nasaWrapper {
@@ -16,4 +23,13 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 10px 0px;
+}
+
+footer {
+    padding: 10px;
+}
+
+main {
+    padding: 20px;
 }
